<resources>
    <string name="app_name">WashingControl</string>

    <string name="button1">Abfrage</string>
    <string name="serverAddress">IP-Adresse</string>
    <string name="serverPort">Port</string>
    <string name="applyValue">Bestätigen</string>
    <string name="printView">Textbox</string>
    <string name="menuitem1">Einstellungen</string>

    <string name="errorHostNotReachable">Server nicht erreichbar</string>
    <string name="errorOnDataReading">Fehler beim Empfangen der Daten des Servers</string>
    <string name="toggleEinweichen">Einweichen</string>
    <string name="toggleVorwäsche">Vorwäsche</string>
    <string name="toggleWaterPlus">Wasser plus</string>
    <string name="toggleShort">Kurz</string>
    <string name="ledOn">Ein</string>
    <string name="ledVorwaesche">Einw./Vorwäsche</string>
    <string name="ledHauptWaesche">Hauptwäsche</string>
    <string name="ledSpuelen">Spülen/Spülstop</string>
    <string name="ledPumpen">Pumpen /Entschl.</string>
    <string name="ledEnd">Knittersch. / Ende</string>
    <string name="startProgram">Programm starten</string>

</resources>
