<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/startRequestButton"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:text="@string/button1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/toggleWaterPlus"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageStator"
        android:layout_width="388dp"
        android:layout_height="259dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/staticwama"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <com.twmiwi.com.washingcontrol.ProgramSwitch
        android:id="@+id/imageRotor"
        android:layout_width="394dp"
        android:layout_height="198dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/schalter"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/imageMiniStator"
        android:layout_width="231dp"
        android:layout_height="115dp"
        app:srcCompat="@drawable/staticmini"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.531"
        android:layout_marginStart="8dp" />

    <com.twmiwi.com.washingcontrol.MiniSwitch
        android:id="@+id/imageMiniSwitch"
        android:layout_width="231dp"
        android:layout_height="101dp"
        app:srcCompat="@drawable/miniswitch"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/startRequestButton"
        app:layout_constraintBottom_toBottomOf="@+id/imageMiniStator"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <ToggleButton
        android:id="@+id/toggleEinweichen"
        android:layout_width="117dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:textOff="@string/toggleEinweichen"
        android:textOn="@string/toggleEinweichen"
        tools:text="@string/toggleEinweichen"
        android:layout_marginRight="-9dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="54dp" />

    <ToggleButton
        android:id="@+id/toggleWaterPlus"
        android:layout_width="117dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:textOff="@string/toggleWaterPlus"
        android:textOn="@string/toggleWaterPlus"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toggleVorwäsche"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ToggleButton
        android:id="@+id/toggleVorwäsche"
        android:layout_width="117dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:textOff="@string/toggleVorwäsche"
        android:textOn="@string/toggleVorwäsche"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toggleEinweichen" />

    <ToggleButton
        android:id="@+id/toggleShort"
        android:layout_width="117dp"
        android:layout_height="50dp"
        android:textOff="@string/toggleShort"
        android:textOn="@string/toggleShort"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/toggleWaterPlus"
        android:layout_marginRight="0dp" />

    <RadioButton
        android:id="@+id/ledOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:duplicateParentState="false"
        android:text="@string/ledOn"
        android:textAlignment="textStart"
        android:layout_marginLeft="-8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="61dp" />

    <RadioButton
        android:id="@+id/ledVorwaesche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/ledVorwaesche"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="93dp" />

    <RadioButton
        android:id="@+id/ledHauptWaesche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/ledHauptWaesche"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="125dp"
        android:layout_marginLeft="-3dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <RadioButton
        android:id="@+id/ledSpuelen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:text="@string/ledSpuelen"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="157dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <RadioButton
        android:id="@+id/ledPumpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/ledPumpen"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="189dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <RadioButton
        android:id="@+id/ledEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/ledEnd"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="221dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>
