<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/applyValues"
        android:layout_width="108dp"
        android:layout_height="42dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/applyValue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverAddress" />

    <EditText
        android:id="@+id/serverPort"
        android:layout_width="128dp"
        android:layout_height="44dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/serverPort"
        android:inputType="number"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/serverAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/serverAddress"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>